force-app/main/default/objects/InvoiceItem__c/InvoiceItem__c.object-meta.xml
<CustomObject>
    <description>[a0A][InvoiceItem__c] Itens da Nota fiscal.</description>
    <label>Item da nota fiscal</label>
    <nameField>
        <displayFormat>NF-{000000000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da nota fiscal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>