force-app/main/default/objects/InvoiceItem__c/fields/BCICMSNmb__c.field-meta.xml
<CustomField>
    <fullName>BCICMSNmb__c</fullName>
    <label>Base de cálculo ICMS</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>