force-app/main/default/objects/InvoiceItem__c/fields/BCSTNmb__c.field-meta.xml
<CustomField>
    <fullName>BCSTNmb__c</fullName>
    <label>Base de Cálculo Susbstituição tributaria</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>