force-app/main/default/objects/InvoiceItem__c/fields/CFOPTxt__c.field-meta.xml
<CustomField>
    <fullName>CFOPTxt__c</fullName>
    <label>CFOP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>