force-app/main/default/objects/InvoiceItem__c/fields/ICMSAliquotNmb__c.field-meta.xml
<CustomField>
    <fullName>ICMSAliquotNmb__c</fullName>
    <label>Alíquota ICMS</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>