force-app/main/default/objects/InvoiceItem__c/fields/ICMSCostNmb__c.field-meta.xml
<CustomField>
    <fullName>ICMSCostNmb__c</fullName>
    <label>Valor ICMS</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>