force-app/main/default/objects/InvoiceItem__c/fields/InvoiceMdt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceMdt__c</fullName>
    <label>Número da nota fiscal</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Itens da nota fiscal</relationshipLabel>
    <relationshipName>Itens_da_nota_fiscal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>