force-app/main/default/objects/InvoiceItem__c/fields/IPIAliquotNmb__c.field-meta.xml
<CustomField>
    <fullName>IPIAliquotNmb__c</fullName>
    <label>Aliquota IPI</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>