force-app/main/default/objects/InvoiceItem__c/fields/IPIBCNmb__c.field-meta.xml
<CustomField>
    <fullName>IPIBCNmb__c</fullName>
    <label>Base IPI</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>