force-app/main/default/objects/InvoiceItem__c/fields/IPICostNmb__c.field-meta.xml
<CustomField>
    <fullName>IPICostNmb__c</fullName>
    <label>Valor IPI</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>