force-app/main/default/objects/InvoiceItem__c/fields/MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroup__c</fullName>
    <formula>TEXT(ProductLkp__r.MaterialGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo de Material</label>
    <type>Text</type>
</CustomField>