force-app/main/default/objects/InvoiceItem__c/fields/MeasureUnitTxt__c.field-meta.xml
<CustomField>
    <fullName>MeasureUnitTxt__c</fullName>
    <label>Unidade medida</label>
    <length>3</length>
    <type>Text</type>
</CustomField>