force-app/main/default/objects/InvoiceItem__c/fields/NCMSHNmb__c.field-meta.xml
<CustomField>
    <fullName>NCMSHNmb__c</fullName>
    <label>NCM</label>
    <length>16</length>
    <type>Text</type>
</CustomField>