force-app/main/default/objects/InvoiceItem__c/fields/QuantityNmb__c.field-meta.xml
<CustomField>
    <fullName>QuantityNmb__c</fullName>
    <label>Quantidade</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>