force-app/main/default/objects/InvoiceItem__c/fields/SystemFml__c.field-meta.xml
<CustomField>
    <fullName>SystemFml__c</fullName>
    <formula>&quot;TODO: Utilizar o objeto certo&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sistema</label>
    <type>Text</type>
</CustomField>