force-app/main/default/objects/InvoiceItem__c/fields/TaxSubstitutionAliquotNmb__c.field-meta.xml
<CustomField>
    <fullName>TaxSubstitutionAliquotNmb__c</fullName>
    <label>Aliquota substituição tributária</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>