force-app/main/default/objects/InvoiceItem__c/fields/TaxSubstitutionCost__c.field-meta.xml
<CustomField>
    <fullName>TaxSubstitutionCost__c</fullName>
    <label>Valor substituição tributária</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>