force-app/main/default/objects/InvoiceItem__c/fields/UnitCostNmb__c.field-meta.xml
<CustomField>
    <fullName>UnitCostNmb__c</fullName>
    <label>Valor unitário</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>